# zed

./: Cargo.toml
crates/anthropic/src/: anthropic.rs
crates/cloud_zeta2_prompt/src/: cloud_zeta2_prompt.rs
crates/language_model/src/: language_model.rs
crates/language_models/src/provider/: ollama.rs
crates/settings/src/: settings.rs  settings_store.rs  vscode_import.rs
crates/settings_content/: Cargo.toml
crates/settings_content/src/: agent.rs  editor.rs  language.rs  language_model.rs  settings_content.rs  terminal.rs  theme.rs
crates/sweep_ai/: Cargo.toml
crates/sweep_ai/src/: jump.rs  sweep_ai.rs
crates/vim/src/normal/: increment.rs
crates/zeta2/src/: related_excerpts.rs
